fixed weird nav button alignement

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -133,3 +133,8 @@ body.left-nav .main-content {
     font-weight: bold;
     text-decoration: none;
 }
+
+
+#slide-menu-button {
+    margin-top: 7%;
+}
